--- a/default.conf.template
+++ b/default.conf.template
@@ -1,8 +1,13 @@
 server {
-  listen $PORT default_server;
+	listen $PORT default_server;
+	
+	proxy_set_header Host $host;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	proxy_set_header X-Forwarded-Proto $scheme;
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-  }
+	location / {
+		proxy_pass http://157.245.135.107:7070;
+	}
+
 }
